# libfaber

./: README.md
sources/: CMakeLists.txt
sources/io/: CMakeLists.txt
sources/io/include/: file_monitor.h  io.h
sources/io/src/: file_monitor.cpp  io.cpp
sources/test/: CMakeLists.txt  main.cpp
